API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

11-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	simple fixes to allow compiling with gcc 3.1
	rename gettext to readtext as unobtrusively as
		possible.
	fix BGreek_Greek trans to work with icu2.1
	add SWMgr::isICU for apps to check if ICU stuff is
		available

10-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	Initial support for using sword transliterators
	with offical ICU

24-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added a few english abbrevs to better parse BW exported
		texts.
	Added Error() raised on improperly parsed VerseKey
		text.

22-Jun-2002	Daniel Glassey <dglassey@crosswire.org>
	Fixes to allow compiling with gcc3
	add configure support to libVCL and change X!/installmgr
		to build it automatically
	remove --enable-vcl from core sword

13-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed Module heading bug
	Fixed SWConfig += bug again
	Fixed SWModule size logic when getEntrySize returns -1

06-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed SWConfig += bug
	Added Efata's Indonesian locale

09-Jun-2002     Joachim Ansorg <jansorg@crosswire.org>
       	Added Perl bindings by J. Kaiser to the CVS

06-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Dominique Corbex' fr locale updates
	Added new resultBuffer protected member to SWBasicFilter

04-Apr-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added VerseKey::getOSISRef()
	Added the beginnings of ThMLOSIS filter

02-Apr-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added gsoap bindings and test client.
	Added gbfstrongs parsing of entry attributes

30-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added mod2imp to export a sword module in 'imp'
		format
	Better entry attribute parsing in greekdef* and
		thmlstrongs*

22-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Saulo Rodrigues e Silva's <saulo@jatai.ufg.br>